Добавил кнопку на реакте

--- a/index.html
+++ b/index.html
@@ -90,11 +90,20 @@
             </div>
         </div>
       </div>
-
+      <div id="like_button_container"></div>
       <div class="footer__copyright">
         GreenCorp © 2021
       </div>
+      
   </footer>
+  
+  <!-- Load React. -->
+  <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+  <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+  
   <script src="fa/js/all.min.js"></script>
+  <script src="./like_button.js"></script>
+
 </body>
 </html>
