--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
   <header>
       <img class="header__logo" src='img/logo.svg'>
       <div class="header__conrols">
-          <a href="#contacs">Контакты</a>
+          <a href="#form">Контакты</a>
           <button>Заказать</button>
       </div>
   </header>
   <section class="about">
+    <canvas class="orb-canvas" id="orb-canvas"></canvas>
     <div class="about__info animate__animated animate__fadeInLeft">
       <h1>Солнечные панели GreenRobotic</h1>
       <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
-      <button>Узнать подробнее <i class="fas fa-angle-right"></i></button>
+      <button class="more-button" href="#features">Узнать подробнее <i class="fas fa-angle-right"></i></button>
     </div>
     <div class="about__images animate__animated animate__fadeInRight">
     <div class="scaler">
@@ -34,7 +35,7 @@
       <img class="about__image" src="img/solar-panel.png">
     </div>
   </section>
-  <section class="features">
+  <section class="features" id="features">
       <div class="cards">
         <div class="card">
           <div class="card__logo" style="color: #ffb406">
@@ -52,7 +53,7 @@
         </div>
         <div class="card">
           <div class="card__logo" style="color: #22a030">
-            <i class="fa-solid fa-arrow-trend-up"></i>
+            <i class="fas fa-chart-line"></i>
           </div>
           <h3>Максимальная эффективность</h3>
           <p>Солнечные панели GreenRobotic обеспечивают максимальное производство энергии круглый год, даже на крышах со сложными углами</p>
@@ -61,7 +62,11 @@
       <div class="features__border"></div>
       <div class="features__feedback">
         <div class="features__feedback-left">
-          <h2>Нам доверяет <br>5000+ счастливых клиентов</h2>
+          <h2>
+            Нам доверяет
+            <br>
+            <div class="features__clients-count">5000+</div> счастливых клиентов
+          </h2>
           <p>Мы помогли тысячам людей перейти на зеленую энергию.<br>После заказа мы позаботимся обо всем: доставка панелей, проект, установка, помощь в использовании</p>
         </div>
         <div class="features__feedback-right">
@@ -85,12 +90,12 @@
         <p>Солнечные панели сертифицированы мировыми экспертами: система безопасна и надежна</p>
         <p>Следите за накоплением энергии вашего дома в режиме реального времени и настраивайте процент расхода и накопления энергии</p>
         <div class="promo_button__container">
-          <button class="promo__button">Заказать<i class="fa-solid fa-chevron-right"></i></button>
+          <button type="button" class="promo__button">Заказать<i class="fa-solid fa-chevron-right"></i></button>
         </div>
       </div>
     </div>
 </section>
-  <section class="form">
+  <section class="form" id="form">
       <div class="form__container">
           <h1>Оставьте свои контакты</h1>
           <p>Поможем подобрать модель.<br>Выбрать удобный вариант доставки и установки.<br>Гарантия возврата денег.</p>
@@ -114,7 +119,7 @@
                     <option value="10 - 30">10 000₽ – 30 000₽</option>
                     <option value="30 - 60">30 000₽ – 60 000₽</option>
                     <option value="60 - 100">60 000₽ – 100 000₽</option>
-                    <option value="100+">100 000₽</option>
+                    <option value="other">Другое</option>
                 </select>
               </div>
               <button type="submit" class="form__submit">Отправить заявку</button>
@@ -160,6 +165,8 @@
   
   <script src="fa/js/all.min.js"></script>
   <script src="./like_button.js"></script>
+  <script src="js/canvas.js"></script>
+  <script src="js/animations.js"></script>
 
 </body>
 </html>
